--- a/.travis.yml
+++ b/.travis.yml
@@ -31,9 +31,9 @@ before_install:
   - if [ "${TRAVIS_OS_NAME}" == "osx" -a "${CC}" == "gcc" ]; then export CC=gcc-4.8; fi
 
 script:
-  - if [[ $TRAVIS_OS_NAME == 'linux'] ]; then
-      - docker run -v `pwd`:/build raqm;
-      - sh -c "
+  - if [[ $TRAVIS_OS_NAME == 'linux']]; then
+      docker run -v `pwd`:/build raqm;
+      sh -c "
       cmake -DUNIT_TEST=1 -DWANT_DEBUG=1 -DENABLE_GTK_DOC=1 &&
       make  &&
       make test &&
@@ -41,10 +41,10 @@ script:
     ";
     fi
   - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
-      - cmake -DUNIT_TEST=1 -DWANT_DEBUG=1 -DENABLE_GTK_DOC=1;
-      - make;
-      - make test;
-      - make docs;
+      cmake -DUNIT_TEST=1 -DWANT_DEBUG=1 -DENABLE_GTK_DOC=1;
+      make;
+      make test;
+      make docs;
    fi
 
 after_success:
