--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ before_install:
   - if [ "${TRAVIS_OS_NAME}" == "osx" -a "${CC}" == "gcc" ]; then export CC=gcc-4.8; fi
 
 script:
-  - if [[ $TRAVIS_OS_NAME == 'linux']]; then
+  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
       docker run -v `pwd`:/build raqm;
       sh -c "
       cmake -DUNIT_TEST=1 -DWANT_DEBUG=1 -DENABLE_GTK_DOC=1 &&
@@ -41,6 +41,7 @@ script:
     ";
     fi
   - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
+      which gtkdoc-scan
       cmake -DUNIT_TEST=1 -DWANT_DEBUG=1 -DENABLE_GTK_DOC=1;
       make;
       make test;
