disabled build gtk-doc under OSX
There is a bug in gtk-doc & cmake prevent building docs, see
https://bugzilla.gnome.org/show_bug.cgi?id=776205

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,10 +46,9 @@ script:
     ";
     fi
   - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
-      cmake -DUNIT_TEST=1 -DWANT_DEBUG=1 -DENABLE_GTK_DOC=1;
+      cmake -DUNIT_TEST=1 -DWANT_DEBUG=1;
       make;
       make test;
-      make docs;
    fi
 
 after_success:
