--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,25 +1,29 @@
+version: 1.0.{build}
+
 os:
   - Visual Studio 2015
+platform: 
+- Win32
 
 install:
-  - set PATH=C:\msys64\usr\bin;C:\msys64\mingw64\bin;%PATH%
-  - appveyor DownloadFile "https://raw.githubusercontent.com/swig/cccl/master/cccl"
-  - call "%VS140COMNTOOLS%\..\..\VC\vcvarsall.bat" %PLATFORM%
-  - appveyor-retry bash -c "pacman -Syu --noconfirm"
-  - appveyor-retry bash -c "pacman -S --noconfirm autoconf automake libtool gtk-doc mingw-w64-x86_64-pkg-config mingw-w64-x86_64-harfbuzz mingw-w64-x86_64-fribidi mingw-w64-x86_64-freetype"
+  - cd win
+  - appveyor DownloadFile https://sourceforge.net/projects/omlx/files/raqm/raqm-cmake-deps-29-12-2016-x86-debug.zip
+  - ps: Start-FileDownload 'https://github.com/robotology/ycm/releases/download/v0.2.2/YCM-0.2.2-win32.msi'
+  - 7z x raqm-cmake-deps-29-12-2016-x86-debug.zip
+  
+build:
 
 build_script:
-  - set CC=cccl
-  - set CXX=cccl
-  - set LD=cccl
-  - set PKG_CONFIG_PATH=%PKG_CONFIG_PATH%:/mingw64/lib/pkgconfig
-  - bash -c "mv cccl /usr/bin"
-  - bash -c "exec 0</dev/null; ./autogen.sh"
-  - bash -c "exec 0</dev/null; ./configure"
-  - bash -c "exec 0</dev/null; make CFLAGS='/W4 /WX /wd4068'"
+  # build the library 
+  - cmake -DUNIT_TEST=1 -DWANT_DEBUG=1 -Dstatic_lib=1
+  # build the library for Release and Debug
+  - cmake --build . --config Debug 
+  - ctest -C "Debug"
+  
+after_build:
+  # Install only release 
+  #- cmd: cmake --build C:\dev\lib-template-cmake\build --config Release --target INSTALL
 
-#test_script:
-#  - bash -c "make check"
-
-# disable automatic tests
-test: off
+# For some reason, tests are not working. Debug this and enable them again
+# test_script:
+#   - cmd: ctest -C Release -VV
