--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -34,20 +34,22 @@ target_link_libraries(raqm-test
 )
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
-  set(CMAKE_C_FLAGS "/W4 /WX- /wd4068")
+  set(CMAKE_C_FLAGS "/W4 /WX- /wd4068 /wd4996")
   target_compile_options(raqm-test INTERFACE  ${CMAKE_C_FLAGS})
 endif()
 
-file(COPY ${fonts} DESTINATION fonts) 
+file(COPY ${fonts} DESTINATION fonts/sha1sum) 
 
 file(GLOB_RECURSE tests_list *.test)
 foreach(test ${tests_list})
-  get_filename_component (testname ${test} NAME)
+  get_filename_component (testname ${test} NAME_WE)
+  get_filename_component (testpath ${test} ABSOLUTE)
   add_test(NAME ${testname}
     COMMAND ${CMAKE_COMMAND}
     -DTEST_PROG=$<TARGET_FILE:raqm-test>
     -DSOURCEDIR=${CMAKE_CURRENT_SOURCE_DIR}
     -Dtestname=${testname}
+    -Dtestpath=${testpath}
     -P ${CMAKE_CURRENT_SOURCE_DIR}/runtest.cmake
     )
 endforeach()
